Draft and unbound version of registry main window

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -71,6 +71,9 @@
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ModelContext.cs" />
+    <Compile Include="Person.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
