1. Rolled back changes to date fields to be non-nullable
2. Made some text fields of type nvarchar instead of varchar
3. Added Resources project that will hold all images and other stuff
4. Added logging of executing queries for debug builds
5. Patient search now searches using StartsWith criteria
6. Slightly different patient template
7. Added UniversalConverter but didn't have a chance to test it

--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -97,6 +97,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\UniversalConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -122,6 +123,7 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
