--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -163,6 +163,10 @@
       <Project>{69d040e8-9029-45c8-8824-d64c6dd793e3}</Project>
       <Name>MainLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Resources\Resources.csproj">
+      <Project>{f5ef279c-ad37-46cd-9558-61438976b828}</Project>
+      <Name>Resources</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StuffLib\StuffLib.csproj">
       <Project>{d44b47af-d567-4754-8e22-b24acac78ca4}</Project>
       <Name>StuffLib</Name>
