New version of SearchPatients. It is now asynchrounous

--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -42,8 +42,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\Man48x48.png" />
-    <Content Include="Images\Woman48x48.png" />
+    <Resource Include="Images\Man48x48.png" />
+    <Resource Include="Images\Woman48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
