1. Reorder textbox and selected patient placeholder in PatientSearchView
2. Added keyboard support for textbox in PatientSearchView
3. Other minor fixes

--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -112,8 +112,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Converters\IntToInversedVisibilityConverter.cs" />
-    <Compile Include="Converters\IntToVisiblityConverter.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="Service\MainService.cs" />
     <Compile Include="ViewModel\PersonViewModel.cs" />
@@ -171,6 +169,9 @@
       <Project>{d44b47af-d567-4754-8e22-b24acac78ca4}</Project>
       <Name>StuffLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
