Intermediate commit to get my code to home
1. Added Genders to model
2. Started work with Add/Edit Person

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -106,6 +106,9 @@
     <Compile Include="DBSetting.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Gender.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ModelContext.cs" />
     <Compile Include="Person.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
