--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -104,6 +104,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\EditPersonData.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -114,7 +118,11 @@
     </Compile>
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="Service\MainService.cs" />
+    <Compile Include="ViewModel\EditPersonData.cs" />
     <Compile Include="ViewModel\PersonViewModel.cs" />
+    <Compile Include="View\EditPersonData.xaml.cs">
+      <DependentUpon>EditPersonData.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
