PatientSearch functionality is extracted into separate set of classes

--- a/MainLib/MainLib.csproj
+++ b/MainLib/MainLib.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{69D040E8-9029-45C8-8824-D64C6DD793E3}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MainLib</RootNamespace>
+    <RootNamespace>Core</RootNamespace>
     <AssemblyName>MainLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -103,6 +103,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Services\Interface\IPatientService.cs" />
+    <Compile Include="Services\Implementation\PatientService.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -125,6 +127,7 @@
       <Name>StuffLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
