--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -104,6 +104,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="View\PatientSearchUserControl.xaml.cs">
+      <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\EditPersonData.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -117,8 +120,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
-    <Compile Include="Service\MainService.cs" />
     <Compile Include="ViewModel\EditPersonData.cs" />
+    <Compile Include="ViewModel\PatientSearchViewModel.cs" />
     <Compile Include="ViewModel\PersonViewModel.cs" />
     <Compile Include="View\EditPersonData.xaml.cs">
       <DependentUpon>EditPersonData.xaml</DependentUpon>
@@ -127,7 +130,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\PatientSearchView.xaml">
+    <Page Include="View\PatientSearchUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\PersonView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
