1. Introduce interfaces for DataContext and DataContextProvider to be able to mock them
2. Minor fixes to Registry
3. Added sample test project and test class

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -109,7 +109,8 @@
     <Compile Include="Gender.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="ModelContext.cs" />
+    <Compile Include="Misc\ModelContext.cs" />
+    <Compile Include="Misc\ModelContextProvider.cs" />
     <Compile Include="Person.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
