--- a/MainLib.Test/MainLib.Test.csproj
+++ b/MainLib.Test/MainLib.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5EF279C-AD37-46CD-9558-61438976B828}</ProjectGuid>
+    <ProjectGuid>{31E345DA-8A65-436D-8DAC-EBFB6540CD00}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Resources</RootNamespace>
-    <AssemblyName>Resources</AssemblyName>
+    <RootNamespace>MainLib.Test</RootNamespace>
+    <AssemblyName>MainLib.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,19 +43,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PatientServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Man48x48.png" />
-    <Resource Include="Images\Woman48x48.png" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Question48x48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\AddPatient48x48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Loading16x16.gif" />
+    <ProjectReference Include="..\MainLib\MainLib.csproj">
+      <Project>{69D040E8-9029-45C8-8824-D64C6DD793E3}</Project>
+      <Name>MainLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StuffLib\StuffLib.csproj">
+      <Project>{D44B47AF-D567-4754-8E22-B24ACAC78CA4}</Project>
+      <Name>StuffLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestCore\TestCore.csproj">
+      <Project>{D1A16BEA-8831-4464-9382-86CB9B7F5849}</Project>
+      <Name>TestCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
