- Added tables and classes for Assignment and AssignmentType
- Added table for Gender
- Added class EntityContext<T> which encapsulates entity and its data context

--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Converters\UniversalConverter.cs" />
     <Compile Include="Misc\IDataContext.cs" />
     <Compile Include="Misc\IDataContextProvider.cs" />
+    <Compile Include="Misc\EntityContext.cs" />
+    <Compile Include="Misc\IReferenceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
