Started work with InsuranceDocuments
1. Added InsuranceDocuments table
2. Added InsuranceDocumentTypes table
3. Added InsuranceCompanies table
4. Started work with InsuranceDocumentView and
InsuranceDocumentViewModel

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -112,6 +112,15 @@
     <Compile Include="Gender.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="InsuranceCompany.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="InsuranceDocument.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="InsuranceDocumentType.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Misc\ModelContext.cs" />
     <Compile Include="Misc\ModelContextProvider.cs" />
     <Compile Include="PartialClasses\Person.cs" />
