--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Misc\StuffExtension.cs" />
     <Compile Include="ViewModel\FailableViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
