Draft version of Save Person names

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Assignment.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ChangeNameReason.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ChildCareModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
