--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -54,6 +54,9 @@
   <ItemGroup>
     <Resource Include="Images\Loading16x16.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\Group.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
