--- a/MainLib/packages.config
+++ b/MainLib/packages.config
@@ -4,5 +4,6 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="MvvmEventBinding" version="1.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
 </packages>
