--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -59,6 +59,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\RibbonControlLibrary\Microsoft.Windows.Shell.dll</HintPath>
     </Reference>
+    <Reference Include="MvvmEventBinding">
+      <HintPath>..\packages\MvvmEventBinding.1.0.0\lib\net45\MvvmEventBinding.dll</HintPath>
+    </Reference>
     <Reference Include="RibbonControlsLibrary, Version=4.0.0.11019, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\RibbonControlLibrary\RibbonControlsLibrary.dll</HintPath>
