- Added test data
- Added Room table
- Minor fixes to EditPersonDataView
- Added ICacheService and its implenetation
- Minor fixes to PatientAssignmentListView
- Added some tests to DataContextCacheService

--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -146,6 +146,9 @@
     <Compile Include="RecordType.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Room.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
