Draft version of EditPersonView

--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -108,15 +108,23 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DTO\AssignmentDTO.cs" />
+    <Compile Include="ViewModel\EditPersonViewModel.cs" />
     <Compile Include="ViewModel\InsuranceDocumentViewModel.cs" />
     <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
     <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
     <Compile Include="ViewModel\AssignmentViewModel.cs" />
     <Compile Include="ViewModel\PatientAssignmentListViewModel.cs" />
+    <Compile Include="View\EditPersonView.xaml.cs">
+      <DependentUpon>EditPersonView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PatientSearchUserControl.xaml.cs">
       <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
     </Compile>
-    <Page Include="View\EditPersonDataView.xaml">
+    <Page Include="View\EditPersonDataUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\EditPersonView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -136,8 +144,8 @@
     <Compile Include="ViewModel\EditPersonDataViewModel.cs" />
     <Compile Include="ViewModel\PatientSearchViewModel.cs" />
     <Compile Include="ViewModel\PersonViewModel.cs" />
-    <Compile Include="View\EditPersonDataView.xaml.cs">
-      <DependentUpon>EditPersonDataView.xaml</DependentUpon>
+    <Compile Include="View\EditPersonDataUserControl.xaml.cs">
+      <DependentUpon>EditPersonDataUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
