--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -55,7 +55,7 @@
     <Resource Include="Images\Loading16x16.gif" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\BackArrow24x24.png" />
+    <Resource Include="Images\BackArrow24x24.png" />
     <Resource Include="Images\UserGroup48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
