--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Misc\IDataContext.cs" />
     <Compile Include="Misc\IDataContextProvider.cs" />
     <Compile Include="Misc\EntityContext.cs" />
+    <Compile Include="Misc\IDataAccessLayer.cs" />
+    <Compile Include="Misc\ISimpleLocator.cs" />
+    <Compile Include="Misc\ObjectCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
